test/parser/int_literals.0.stderr
<source>:8:14: error: integer literal too large
    8 |     let d4 = 6484515111111684548645684858465644495555132795;
      |              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<source>:15:14: error: integer literal too large
   15 |     let b5 = 0B1111111111111111111111111111111111111111111111111111111111111111111111;
      |              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<source>:22:14: error: integer literal too large
   22 |     let h5 = 0XffFFfFffffffffffffffffffF;
      |              ~~~~~~~~~~~~~~~~~~~~~~~~~~~
